fixed bottom margin on mobile

--- a/src/App.less
+++ b/src/App.less
@@ -41,7 +41,7 @@
 
 .button-large{
     padding: 1.2em 2.2em 1.2em 2.2em;
-    margin: 1em 0.5em 1em 0.5em;
+    margin: 1em 0.5em 5em 0.5em;
 	.button
 }
 
